--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ code {
 .App__heading {
   font-size: 30px;
   font-weight: bold;
-  color: #383c41;
+  color: #282c31;
   margin: 2px 16px 0;
   cursor: pointer;
 }
@@ -63,4 +63,8 @@ code {
 
 input[type=number] {
   width: 100px;
+}
+
+.section {
+  padding: 2rem 1rem;
 }
