more pulley types

--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,8 @@ input[type=number] {
 .selectedPulley {
   background: #ff9089 !important;
 }
+
+.sidebarAddButton {
+  display: block;
+  margin-bottom: 4px;
+}
