fix drag select bug, pulley type bug

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,8 @@ main table {
   margin-bottom: 8px;
   display: block;
 }
+
+#DropItemDropdown {
+  display: inline-block;
+  margin-right: 4px;
+}
